use mcast_sock for sending of message rather than sock, this way ip_ttl is used